New upgrade for appium and selenium version